2-1 Добавлен проект WebStore.Interfaces

--- a/UI/WebStore_2020/Views/Account/Login.cshtml
+++ b/UI/WebStore_2020/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model UI.WebStore.Models.LoginViewModel
+﻿@model Common.WebStore.ViewModels.LoginViewModel
 
 <section id="form">
     <!--form-->
