--- a/UI/WebStore_2020/Views/Account/Register.cshtml
+++ b/UI/WebStore_2020/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model UI.WebStore.Models.RegisterUserViewModel
+﻿@model Common.WebStore.ViewModels.RegisterUserViewModel
 
 <section id="form">
     <!--form-->
