--- a/UI/WebStore_2020/Views/Cart/Details.cshtml
+++ b/UI/WebStore_2020/Views/Cart/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model UI.WebStore.Models.OrderDetailsViewModel
+﻿@model Common.WebStore.ViewModels.OrderDetailsViewModel
 @{
     ViewData["Title"] = "Корзина";
 }
