--- a/UI/WebStore_2020/Views/Cart/_OrderPartial.cshtml
+++ b/UI/WebStore_2020/Views/Cart/_OrderPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model UI.WebStore.Models.OrderViewModel
+﻿@model Common.WebStore.ViewModels.OrderViewModel
 
 <form method="post" asp-antiforgery="true" asp-action="CheckOut">
     <div class="col-sm-6">
