--- a/UI/WebStore_2020/Views/Catalog/Shop.cshtml
+++ b/UI/WebStore_2020/Views/Catalog/Shop.cshtml
@@ -1,4 +1,4 @@
-﻿@model UI.WebStore.Models.CatalogViewModel
+﻿@model Common.WebStore.ViewModels.CatalogViewModel
 @{
     ViewData["Title"] = "Shop";
 }
