--- a/UI/WebStore_2020/Views/Employee/Edit.cshtml
+++ b/UI/WebStore_2020/Views/Employee/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model UI.WebStore.Models.EmployeeViewModel
+﻿@model Common.WebStore.ViewModels.EmployeeViewModel
 
 @{
     ViewData["Title"] = "Редактирование сотрудника";
