--- a/UI/WebStore_2020/Views/Employee/Index.cshtml
+++ b/UI/WebStore_2020/Views/Employee/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<UI.WebStore.Models.EmployeeViewModel>
+﻿@model IEnumerable<Common.WebStore.ViewModels.EmployeeViewModel>
 
 @{
     //Layout = null;
