--- a/UI/WebStore_2020/Views/Profile/Orders.cshtml
+++ b/UI/WebStore_2020/Views/Profile/Orders.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<UI.WebStore.Models.UserOrderViewModel>
+﻿@model List<Common.WebStore.ViewModels.UserOrderViewModel>
 @{
     Layout = "Partial/_ProfileLayout";
     ViewData["Title"] = "Личный кабинет";
