--- a/UI/WebStore_2020/Views/Shared/Components/Brands/Default.cshtml
+++ b/UI/WebStore_2020/Views/Shared/Components/Brands/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<UI.WebStore.Models.BrandViewModel>
+﻿@model IEnumerable<Common.WebStore.ViewModels.BrandViewModel>
 
 <div class="brands_products">
     <!--brands_products-->
