--- a/UI/WebStore_2020/Views/Shared/_Partial/_FeaturedItems.cshtml
+++ b/UI/WebStore_2020/Views/Shared/_Partial/_FeaturedItems.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<UI.WebStore.Models.ProductViewModel>
+﻿@model IEnumerable<Common.WebStore.ViewModels.ProductViewModel>
 
     <div class="features_items">
         <!--features_items-->
