--- a/UI/WebStore_2020/Views/Catalog/ProductDetails.cshtml
+++ b/UI/WebStore_2020/Views/Catalog/ProductDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model UI.WebStore.Models.ProductViewModel
+﻿@model Common.WebStore.ViewModels.ProductViewModel
 @{
     ViewData["Title"] = "ProductDetails";
 }
