--- a/UI/WebStore_2020/Views/Employee/Details.cshtml
+++ b/UI/WebStore_2020/Views/Employee/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model UI.WebStore.Models.EmployeeViewModel
+﻿@model Common.WebStore.ViewModels.EmployeeViewModel
 @{
     //Layout = null;
     ViewData["Title"] = "Детали....";
