--- a/UI/WebStore_2020/Views/Shared/Components/Categories/Default.cshtml
+++ b/UI/WebStore_2020/Views/Shared/Components/Categories/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<UI.WebStore.Models.CategoryViewModel>
+﻿@model IEnumerable<Common.WebStore.ViewModels.CategoryViewModel>
 
 <h2>Категории</h2>
 <div class="panel-group category-products" id="accordian">
