--- a/UI/WebStore_2020/Views/Shared/_Partial/_FeaturedItems.cshtml
+++ b/UI/WebStore_2020/Views/Shared/_Partial/_FeaturedItems.cshtml
@@ -3,7 +3,8 @@
     <div class="features_items">
         <!--features_items-->
         <h2 class="title text-center">Features Items</h2>
-
+        @if (Model != null)
+        {
         @foreach (var item in Model)
         {
             <div class="col-sm-4">
@@ -11,17 +12,17 @@
                     <div class="single-products">
                         <div class="productinfo text-center">
                            
-                            <a asp-controller="Catalog" asp-action="ProductDetails" asp-route-id="@item.Id">
-                                <img src="~/images/home/@item.ImageUrl" alt="" />
+                            <a asp-controller="Catalog" asp-action="ProductDetails" asp-route-id="@item?.Id">
+                                <img src="~/images/home/@item?.ImageUrl" alt="" />
                             </a>
                             
-                            <h2>@item.Price.ToString("C")</h2>
-                            <p>@item.Name</p>
+                            <h2>@item?.Price.ToString("C")</h2>
+                            <p>@item?.Name</p>
 
                             <a 
                                 asp-controller="Cart" 
                                 asp-action="AddToCart" 
-                                asp-route-id="@item.Id" 
+                                asp-route-id="@item?.Id" 
                                 asp-route-returnUrl="@Context.Request.Path"
                                 class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Добавить в корзину</a>
                         </div>
@@ -34,6 +35,7 @@
                     </div>
                 </div>
             </div>
+        }
         }
 
     </div><!--features_items-->
