--- a/UI/WebStore_2020/Views/Home/Index.cshtml
+++ b/UI/WebStore_2020/Views/Home/Index.cshtml
@@ -1,32 +1,34 @@
-﻿@model IEnumerable<Common.WebStore.DomainNew.ApiModels.StudentModel>
+﻿@*@model IEnumerable<Common.WebStore.DomainNew.ApiModels.StudentModel>*@
+@model IEnumerable<string>
 
 @{
     ViewData["Title"] = "Главная страница";
 }
 
 
-    <div>
-        <p style="font-weight:800">Список студентов</p>
-        @foreach (var item in Model)
+<div>
+    <p style="font-weight:800">Список студентов</p>
+    @foreach (var item in Model)
         {
-            <p>@item.Id. @item.Name @item.Surname </p>
+            <p>@*@item.Id. @item.Name @item.Surname*@ 
+               item </p>
         }
-    </div>
+</div>
 
 @await Html.PartialAsync("_Partial/_Slider")
 
-    <section>
-        
+<section>
 
-        <div class="row">
 
-            <div class="col-sm-3">
-                @await Html.PartialAsync("_Partial/_LeftSideBar")
-            </div>
-            <div class="col-sm-9 padding-right">
-                @*@await Html.PartialAsync("_Partial/_FeaturedItems")*@
-                @await Html.PartialAsync("_Partial/_CategoryTab")
-                @await Html.PartialAsync("_Partial/_RecommendedItems")
-            </div>
+    <div class="row">
+
+        <div class="col-sm-3">
+            @await Html.PartialAsync("_Partial/_LeftSideBar")
         </div>
-    </section>
+        <div class="col-sm-9 padding-right">
+            @*@await Html.PartialAsync("_Partial/_FeaturedItems")*@
+            @await Html.PartialAsync("_Partial/_CategoryTab")
+            @await Html.PartialAsync("_Partial/_RecommendedItems")
+        </div>
+    </div>
+</section>
