2-6 Реализована подсветка категорий

--- a/UI/WebStore_2020/Views/Shared/_Partial/_LeftSideBar.cshtml
+++ b/UI/WebStore_2020/Views/Shared/_Partial/_LeftSideBar.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="left-sidebar">
     @*@await Component.InvokeAsync("Categories")*@
-    <vc:categories></vc:categories>
+    <vc:categories category-id="@Context.Request.Query["CategoryId"].ToString()"></vc:categories>
 
     <vc:Brands />
     @*  @await Component.InvokeAsync("Brands")*@
