--- a/UI/WebStore_2020/Views/Shared/Components/Categories/Default.cshtml
+++ b/UI/WebStore_2020/Views/Shared/Components/Categories/Default.cshtml
@@ -1,9 +1,10 @@
-﻿@model IEnumerable<Common.WebStore.ViewModels.CategoryViewModel>
+﻿@model Common.WebStore.DomainNew.ViewModels.CategoryCompleteViewModel
+
 
 <h2>Категории</h2>
 <div class="panel-group category-products" id="accordian">
     <!--category-products-->
-    @foreach (var parentCategory in Model)
+    @foreach (var parentCategory in Model.Category)
     {
         if (parentCategory.ChildCategories.Count > 0) // если есть дочерние категории
         {
@@ -21,8 +22,8 @@
                         <ul>
                             @foreach (var childCategory in parentCategory.ChildCategories)
                             {
-                                <li>
-                                    <a asp-controller="Catalog" asp-action="Shop" 
+                                <li @(childCategory.Id == Model.CurrentCategoryId ? "class=active" : null)>
+                                    <a asp-controller="Catalog" asp-action="Shop"
                                        asp-route-categoryId="@childCategory.Id">@childCategory.Name</a>
                                 </li>
                             }
@@ -33,14 +34,16 @@
         }
         else // если нет дочерних элементов
         {
+            var isActiveCssClass = (parentCategory.Id == Model.CurrentCategoryId) ? "active" : "";
+
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a asp-controller="Catalog" asp-action="Shop" 
+                    <h4 class="panel-title @isActiveCssClass">
+                        <a asp-controller="Catalog" asp-action="Shop"
                            asp-route-categoryId="@parentCategory.Id">@parentCategory.Name</a>
                     </h4>
                 </div>
             </div>
         }
-    }    
+    }
 </div><!--/category-products-->
