2-6 Реализованы хлебные крошки для товаров

--- a/UI/WebStore_2020/Views/Catalog/ProductDetails.cshtml
+++ b/UI/WebStore_2020/Views/Catalog/ProductDetails.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Common.WebStore.ViewModels.ProductViewModel
 @{
     ViewData["Title"] = "ProductDetails";
+    Layout = "_LayoutBreadcrumbs";
 }
 
 <section>
