--- a/UI/WebStore_2020/Views/Cart/Details.cshtml
+++ b/UI/WebStore_2020/Views/Cart/Details.cshtml
@@ -4,12 +4,12 @@
 }
 
 <section id="cart_items">
-    <div class="breadcrumbs">
+    @*<div class="breadcrumbs">
         <ol class="breadcrumb">
             <li><a href="#">Home</a></li>
             <li class="active">Shopping Cart</li>
         </ol>
-    </div>
+    </div>*@
     <div class="table-responsive cart_info">
         <table class="table table-condensed">
             <thead>
