--- a/UI/WebStore_2020/Views/Catalog/Shop.cshtml
+++ b/UI/WebStore_2020/Views/Catalog/Shop.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Common.WebStore.ViewModels.CatalogViewModel
 @{
     ViewData["Title"] = "Shop";
+    Layout = "_LayoutBreadcrumbs";
 }
 
 @await Html.PartialAsync("_Partial/_Advertisement")
