--- a/UI/WebStore_2020/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/UI/WebStore_2020/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -57,24 +57,39 @@
                 @RenderBody()
 
             </div>
+
             <!-- /. PAGE INNER  -->
         </div>
         <!-- /. PAGE WRAPPER  -->
     </div>
-    <div class="footer">
-        <div class="row">
-            <div class="col-lg-12">
-                &copy;  2014 yourdomain.com | Design by: <a href="http://binarytheme.com" style="color:#fff;" target="_blank">www.binarytheme.com</a>
-            </div>
+<div class="footer">
+    <div class="row">
+        <div class="col-lg-12">
+            &copy;  2014 yourdomain.com | Design by: <a href="http://binarytheme.com" style="color:#fff;" target="_blank">www.binarytheme.com</a>
         </div>
     </div>
-    <!-- /. WRAPPER  -->
+</div>
+     
+<environment include="Development">
+    <script src="~/js/price-range.js"></script>
+    <script src="~/js/jquery.prettyPhoto.js"></script>
+    <script src="~/js/main.js"></script>
+    <script src="~/js/cartLogic.js"></script>
+
+</environment>
+<environment exclude="Development">
+    <script src="~/js/site.min.js"></script>
+</environment>
+
+
+<!-- /. WRAPPER  -->
     <!-- SCRIPTS -AT THE BOTOM TO REDUCE THE LOAD TIME-->
     <!-- JQUERY SCRIPTS -->
     <script src="~/lib/jquery/jquery.min.js"></script>
     <!-- BOOTSTRAP SCRIPTS -->
     <script src="~/lib/twitter-bootstrap/js/bootstrap.min.js"></script>
     <!-- CUSTOM SCRIPTS -->
-    <script src="~/admin/assets/js/custom.js"></script>
+<script src="~/admin/assets/js/custom.js"></script>
+  @RenderSection("scripts", false)
 </body>
 </html>
