--- a/UI/WebStore_2020/Views/Catalog/ProductDetails.cshtml
+++ b/UI/WebStore_2020/Views/Catalog/ProductDetails.cshtml
@@ -60,10 +60,15 @@
                             <span>@Model.Price.ToString("C")</span>
                             <label>Quantity:</label>
                             <input type="text" value="3" />
-                            <button type="button" class="btn btn-fefault cart">
+                            @*<button type="button" class="btn btn-fefault cart">
+                           <i class="fa fa-shopping-cart"></i>
+                            Add to cart
+                            </button>*@
+                            <a data-id="@Model?.Id"
+                               class="btn btn-default cart callAddToCart">
                                 <i class="fa fa-shopping-cart"></i>
-                                Add to cart
-                            </button>
+                                Добавить в корзину
+                            </a>
                         </span>
                         <p><b>Availability:</b> In Stock</p>
                         <p><b>Condition:</b> New</p>
