--- a/UI/WebStore_2020/Views/Shared/_Partial/_FeaturedItems.cshtml
+++ b/UI/WebStore_2020/Views/Shared/_Partial/_FeaturedItems.cshtml
@@ -3,7 +3,7 @@
 
 @{
     var isBrand = Context.Request.Query.ContainsKey("brandId");
-    var brandRoutePath = isBrand ? "asp-route-fromBrand='true'" : "";
+    var brandRoutePath = isBrand ? "true" : "false";
 }
 
  <div class="features_items">
@@ -13,24 +13,24 @@
         {
         @foreach (var item in Model)
         {
-            <div class="col-sm-4">
+            <div class="col-sm-4">  
                 <div class="product-image-wrapper">
                     <div class="single-products">
-                        <div class="productinfo text-center">
+                        <div  class="productinfo text-center">
                            
-                            <a @brandRoutePath asp-controller="Catalog" asp-action="ProductDetails" asp-route-id="@item?.Id">
+                            <a asp-controller="Catalog" asp-action="ProductDetails" asp-route-id="@item?.Id" asp-route-fromBrand ="@brandRoutePath">
                                 <img src="~/images/home/@item?.ImageUrl" alt="" />
-                            </a>
+                           
                             
                             <h2>@item?.Price.ToString("C")</h2>
                             <p>@item?.Name</p>
-
-                            <a 
-                                asp-controller="Cart" 
-                                asp-action="AddToCart" 
-                                asp-route-id="@item?.Id" 
-                                asp-route-returnUrl="@Context.Request.Path"
-                                class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Добавить в корзину</a>
+                            </a>
+                            <a
+                                data-id="@item?.Id"
+                                class="btn btn-default cart callAddToCart">
+                                <i class="fa fa-shopping-cart"></i>
+                                Добавить в корзину
+                            </a>
                         </div>
                     </div>
                     <div class="choose">
