2-7 Добавлено асинхронное удаление из корзины

--- a/UI/WebStore_2020/Views/Cart/Details.cshtml
+++ b/UI/WebStore_2020/Views/Cart/Details.cshtml
@@ -71,13 +71,9 @@
                         @((item.Value * item.Key.Price).ToString("C"))
                     </td>
                     <td class="cart_delete">
-                        <a class="cart_quantity_delete"
-                           asp-controller="Cart"
-                           asp-action="RemoveFromCart"
-                           asp-route-id="@item.Key.Id">
+                        <a data-id="@item.Key.Id" class="cart_quantity_delete">
                             <i class="fa fa-times"></i>
                         </a>
-
                     </td>
                 </tr>
             }
