--- a/UI/WebStore_2020/Views/Cart/Details.cshtml
+++ b/UI/WebStore_2020/Views/Cart/Details.cshtml
@@ -47,7 +47,7 @@
                         </h4>
                         <p>Web ID: 1089772</p>
                     </td>
-                    <td class="cart_price">
+                    <td class="cart_price" data-price="@item.Key.Price">
                         <p>@(item.Key.Price.ToString("C"))</p>
                     </td>
                     <td class="cart_quantity">
@@ -58,16 +58,13 @@
 
                             <a href="#" class="cart_quantity_down" data-id="@item.Key.Id">-</a>
 
-                            @*<a asp-controller="Cart"
-           asp-action="DecrementFromCart"
-           asp-route-id="@item.Key.Id"
-           class="cart_quantity_down">
-            -
-        </a>*@
+
                         </div>
                     </td>
                     <td class="cart_total">
+                        <p class="cart_total_price" data-price="@(item.Value * item.Key.Price)">
                         @((item.Value * item.Key.Price).ToString("C"))
+                        </p>
                     </td>
                     <td class="cart_delete">
                         <a data-id="@item.Key.Id" class="cart_quantity_delete">
