2-8 Создан асинхронный пэйджинг товаров

--- a/UI/WebStore_2020/Views/Catalog/ProductDetails.cshtml
+++ b/UI/WebStore_2020/Views/Catalog/ProductDetails.cshtml
@@ -54,7 +54,7 @@
                         <!--/product-information-->
                         <img src="~/images/product-details/new.jpg" class="newarrival" alt="" />
                         <h2>@Model.Name</h2>
-                        <p>Web ID: 1089772</p>
+                        <p>Web ID: @Model.Id</p>
                         <img src="~/images/product-details/rating.png" alt="" />
                         <span>
                             <span>@Model.Price.ToString("C")</span>
