--- a/UI/WebStore_2020/Views/Catalog/Shop.cshtml
+++ b/UI/WebStore_2020/Views/Catalog/Shop.cshtml
@@ -7,13 +7,15 @@
 
 @await Html.PartialAsync("_Partial/_Advertisement")
 
-<section>
+<category>
     <div class="row">
         <div class="col-sm-3">
             @await Html.PartialAsync("_Partial/_LeftSideBar")
         </div>
         <div class="col-sm-9 padding-right">
-            @await Html.PartialAsync("_Partial/_FeaturedItems", Model.Products)
+            <div id="itemsContainer">
+                @await Html.PartialAsync("_Partial/_FeaturedItems", Model.Products)
+            </div>
             <paging page-model="@Model.PageViewModel"
                     page-action="Shop"
                     page-url-categoryId="@Model.CategoryId"
@@ -22,4 +24,18 @@
             </paging>
         </div>
     </div>
-</section>
+</category>
+
+@section scripts{
+   
+    <script src="~/lib/jquery-loading-overlay/loadingoverlay.min.js"></script>
+    <script src="~/js/productItems.js" asp-append-version="true"></script>
+    <script>
+        $(function() {
+            ProductItems.Init({
+                getUrl: '@Url.Action("GetFilteredItems")'
+            });
+        })
+    </script>
+}
+ 
