--- a/UI/WebStore_2020/Views/Shared/_Layout.cshtml
+++ b/UI/WebStore_2020/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
 
 <script src="~/lib/jquery/jquery.min.js"></script>
 <script src="~/js/cartLogic.js"></script>
-    <script src="~/lib/twitter-bootstrap/js/bootstrap.min.js"></script>
+<script src="~/lib/twitter-bootstrap/js/bootstrap.min.js"></script>
 <script src="~/js/jquery.scrollUp.min.js"></script>
 
 <script type="text/javascript">
@@ -64,6 +64,6 @@
     });
 </script>
 <!--Секция для отображения кастомных скриптов, если понадобятся-->
-     @*@RenderSection("scripts", false)*@
+     @RenderSection("scripts", false)
 </body>
 </html>
