--- a/UI/WebStore_2020/Views/Cart/Details.cshtml
+++ b/UI/WebStore_2020/Views/Cart/Details.cshtml
@@ -45,7 +45,7 @@
                             </a>
 
                         </h4>
-                        <p>Web ID: 1089772</p>
+                        <p>Web ID: @item.Key.Id</p>
                     </td>
                     <td class="cart_price" data-price="@item.Key.Price">
                         <p>@(item.Key.Price.ToString("C"))</p>
